<resources>
    <string name="exitButonText">Exit</string>
    <string name="worning">Worning</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="cancel">CANCEL</string>
    <string name="save">Save and continue</string>
    <string name="doNotSave">Do not save</string>
    <string name="app_name">DDA</string>
    <string name="autonomously">Autonomiusly</string>
    <string name="viaserver">Via server</string>
    <string name="exitApp">Close APP</string>
    <string name="setting">Settings</string>
    <string name="b_addNewPoints">Add points</string>
    <string name="b_back">Back</string>
    <string name="title_activity_login_autonom">ChoiseRouteAutonom</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="b_choise_route">Chouse route</string>
    <string name="b_statistics">Statistics</string>
    <string name="b_addNewRoute">New rout</string>
    <string name="b_newZone">New Zone/District/Region of Sales Representative Responsibility/Other Merchant Cloud Identifier</string>
    <string name="b_existZone">Select existing</string>
    <string name="txtSettting">Settings</string>
    <string name="txtNeedPaswd">Is Paswd need?</string>
    <string name="txtPasswd">Password</string>
    <string name="txtScaleWindow">Window scale</string>
    <string name="txtGoodResult">GOOD RESULT</string>
    <string name="txtLoginPasswdSaved">Login and password saved</string>
    <string name="txtVhoiseOrganisatoin">Select organisation</string>
    <string name="txtOrgName">Organisation name</string>
    <string name="txtSalesMan">Salemen</string>
    <string name="txtNewOrganisation">New organisation</string>
    <string name="select_or_search_org">Select or search </string>
    <string name="select_or_search_sale">Select or search saleman</string>
    <string name="select_or_search_zone">Select or search zone</string>
    <string name="txtToSelectOrg">Select organisation</string>
    <string name="add">Add</string>
    <string name="txtActiveOrganisation">Active:</string>
    <string name="hintNoAnySelected">No item selected</string>
    <string name="tvShowAll">Show other</string>
    <string name="txtEditing">Edit</string>
    <string name="txtDelete">Purge</string>
    <string name="txtCreate">Create</string>
    <string name="txtAddingOrganisation">Adding an organization</string>
    <string name="txtPhoneNum">Phone number</string>
    <string name="txtDescription">Description</string>
    <string name="txtAddOrganisation">Fill in the field  \n ORGANIZATION</string>
    <string name="txtEditingOrg">Editing an organization</string>
    <string name="titleSelectTypeCreation">Selecting points by:</string>
    <string name="txtBtnBySaleMan">representatives</string>
    <string name="txtBtnByZone">zones/sectors</string>
    <string name="titleChoiseSaleMan">Selecting a sales representative</string>
    <string name="txtSaleName">Representative</string>
    <string name="titleAdditingSaleMans">Adding Representatives</string>
    <string name="txtChangeOrg">Change organization</string>
    <string name="txtSaleManName">Representative name</string>
    <string name="txtEditingSaleMan">Editing a Representative</string>
    <string name="txtChoiseZone">Zones/Area/Sectors/other</string>
    <string name="txtAdditingZone">Adding area/zones/other</string>
    <string name="txtZoneName">Zone name</string>
    <string name="txtEditingZone">Editing a area/zone/etc.</string>
    <string name="msgNoPoints">The selected item does not have any entry. \n \n Do you want to add a retail outlet?</string>
    <string name="txtPreferredNavMaps">Preferred navigation maps</string>
    <string name="txt_wont_add_new_point">Wont to add wew salepoint using map or current location?</string>
    <string name="b_from_map">FROM MAP</string>
    <string name="txtLowAccurracy">WORNING  \n \n GPS accuurracy to low.</string>
    <string name="txtTitleNewPoint">Point for</string>
    <string name="txtPointName">Point name</string>
    <string name="txtPresenter">Representer</string>
    <string name="txtZone">Zone/area</string>
    <string name="additing">To add</string>
    <string name="txtFindOwnwe">How to find (landmarks/address/other)</string>
    <string name="txtOwnerName">POINT OWNER  (company/entrepreneur/surname/other)</string>
    <string name="txtAmbar">Warehouse/ramp/entrance</string>
    <string name="txtVisitTime">Product acceptance time</string>
    <string name="txtFrom">from</string>
    <string name="txtTo"> to </string>
    <string name="txtNewStrike">Break</string>
    <string name="txt_landMark">Brand\name/T.Mark</string>
    <string name="allert_double_point">This point is already marked. \n To duplicate points, press \n the SAVE button,\n then the point will be duplicated.</string>
    <string name="txtEditRoute">Editing a route</string>
    <string name="txtRouteName">Route name</string>
    <string name="txtAddRouteName">Enter route name</string>
    <string name="showRoute">Show route</string>
    <string name="txtSelectPoint">Select point</string>
    <string name="txtNewPoint">New \n point</string>
    <string name="txtAddToRoute">Save \n to route</string>
    <string name="txtTitleROUTES">ROUTES</string>
    <string name="selected">CHOICE</string>
    <string name="txtRoute">Route</string>
    <string name="txtToCorrect">Adjust route</string>
    <string name="txtLetsGo">GO</string>
    <string name="noLatLon">Attention! \n \n Point coordinates are not entered.</string>
    <string name="txtAdditingSalePoint">ADDING A POINT</string>
    <string name="b_fromList">From existing</string>
    <string name="txtEdditionPointAdd">To add to the list of route points, \n select where to add a new point.</string>
    <string name="close">CLOSE</string>
    <string name="titleInstallApp">APP INSTALLATION</string>
    <string name="txtInstallAppQuest">You want to install on your device:</string>
    <string name="txtPreferredEdiorMaps">Preferred Edit Map</string>
    <string name="btnTxtCreateToRoute">Go to route</string>
    <string name="tvNewSaleM">New Representative</string>
    <string name="tvNewZon">New zone</string>
    <string name="noDatas">Нет данных</string>
    <string name="txtCorrect">Корректировать</string>
    <string name="notconnected">Application is not connected to the server.</string>
    <string name="we_are_here">We are here to help your business reach new heights!</string>
    <string name="txtzoneTimeZone">Time zone:</string>
    <string name="txtTimezone">(UTC+2)</string>
    <string name="txtWhatsApp">"Phone\nTelegram\nWhatsApp\nViber: "</string>
    <string name="txWhatsApp">+380 (67) 411-98-75</string>
    <string name="mAddress">Address:</string>
    <string name="txtMaddress">13312 Ukraine, Berdychiv, Zdorovia St. 34</string>
    <string name="txtServerInfo">Welcome! If you\'re looking for unique solutions to optimize your vehicle fleet and office processes, you\'re in the right place! Our app showcases basic features, but we offer customized integrations tailored to your specific needs. Both the server and the app are developed considering your office\'s software and hardware, creating a truly unique solution.</string>
    <string name="txtDoContact">Contact us to order your integration:</string>

</resources>