<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_CreateNewRoute"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.autonom.CreateNewRouteActivityAutonom">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/txtVhoiseOrganisatoin"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/txtActiveOrganisation"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvActivOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:gravity="left"
            android:hint="@string/hintNoAnySelected"
            android:text="@string/hintNoAnySelected"
            android:textAllCaps="true"
            android:textColorHighlight="@color/light_gray"
            android:textColorLink="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layOfButtonOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCreateOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/tetGreen"
            android:text="@string/txtCreate"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnEditOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/tetElow"
            android:text="@string/txtEditing"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnDeleteOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/tetAccent"
            android:text="@string/txtDelete"
            android:textSize="10sp" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
    </TableRow>

    <Button
        android:id="@+id/btnShowOrgList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvShowAll" />
    <!--
        <TextView
            android:id="@+id/spinerOrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible" />
            -->

    <LinearLayout
        android:id="@+id/layChoiseType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSeletType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/titleSelectTypeCreation"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBySaleMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnBySaleMan"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnByZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnByZone"
                android:textSize="14sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btnNewSAleM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tvNewSaleM" />
            <Button
                android:id="@+id/btnNezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tvNewZon" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtCreateToRoute" />

            <Button
                android:id="@+id/button_newPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNewPoint" />
        </LinearLayout>

    <ListView
        android:id="@+id/listViewOrgPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp" />

</LinearLayout>
</LinearLayout>