<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_CreateNewRoute"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.autonom.SaleManActivity">


    <TextView
        android:id="@+id/tvTextSaleMan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/titleChoiseSaleMan"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTextOrgName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="124"
        android:gravity="center_horizontal"
        android:text="@string/hintNoAnySelected"
        android:textSize="34sp"
        android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2Sale"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/txtActiveOrganisation"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvActivSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:gravity="left"
                android:hint="@string/hintNoAnySelected"
                android:text="@string/hintNoAnySelected"
                android:textAllCaps="true"
                android:textColorHighlight="@color/light_gray"
                android:textColorLink="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layOfButtonSale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCreateSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/tetGreen"
                android:text="@string/txtCreate"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnEditSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/tetElow"
                android:text="@string/txtEditing"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnDeleteSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/tetAccent"
                android:text="@string/txtDelete"
                android:textSize="10sp" />

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/dividerSale"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <Button
            android:id="@+id/btnShowSaleList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tvShowAll" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaleAddPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b_addNewPoints" />

        <Button
            android:id="@+id/button_saveBySale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAddToRoute" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewSaleMan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp" />

    </LinearLayout>