<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.autonom.AddNewSaleMan">

    <TextView
        android:id="@+id/titleAddingSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/titleAdditingSaleMans"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewTitleSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/txtSaleName"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/editSaleName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/fEditText"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/txtPhoneNum"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/editPhoneSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/fEditText"
        android:ems="10"
        android:inputType="phone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/txtDescription"
        android:textSize="16dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/editDescriptionSale"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/fEditText"
        android:ems="10"
        android:textSize="24sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSaveSale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/tetGreen"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnNotSaveSale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/doNotSave" />
        </LinearLayout>
    </TableRow>
    <Button
        android:id="@+id/btnChangeOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChangeOrg" />
</LinearLayout>