<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:fitsSystemWindows="true"
    tools:context=".ui.autonom.ShowAndEditRoute">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tvTextTextRE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/txtEditRoute"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/txtActiveOrganisation"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvRoutActivOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:gravity="left"
            android:hint="@string/hintNoAnySelected"
            android:text="@string/hintNoAnySelected"
            android:textAllCaps="true"
            android:textColorHighlight="@color/light_gray"
            android:textColorLink="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
    </TableRow>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tvWriteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal|left"
        android:text="@string/txtRouteName"
        android:textAllCaps="true"
        android:textColorHighlight="@color/light_gray"
        android:textColorLink="@color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/edRouteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="left"
        android:hint="@string/txtAddRouteName"
        android:textAllCaps="true"
        android:textColorHighlight="@color/light_gray"
        android:textColorLink="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butSelectPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txtSelectPoint" />

        <Button
            android:id="@+id/butNewPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtNewPoint" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:dividerHeight="1dp" />

</LinearLayout>
</ScrollView>